[package]
name = "determined"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
ts-rs = { version = "10.1.0", default-features = false }
